<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.onboarding.RegisterFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/tick_done"
        app:lottie_autoPlay="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/indeterminateBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="parent"/>


    <TextView
        android:id="@+id/tagLineTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/message_campaign_register_tagline"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <LinearLayout
        android:id="@+id/UENLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tagLineTextView">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_uen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_org_name"
            android:layout_gravity="center_vertical"
            android:layout_weight="7">

            <EditText
                android:id="@+id/input_uen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hint_uen"
                app:layout_constraintTop_toBottomOf="@+id/input_org_name" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/retrieveNameButton"
            style="@style/AppTheme.Button.GetStarted"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15dp"
            android:fontFamily="@font/roboto"
            android:text="Retrieve name"
            android:layout_gravity="center_vertical"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_org_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/UENLinearLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/input_org_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_org_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/UENLinearLayout" />

    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/AppTheme.Button.GetStarted"
        android:id="@+id/registerCMButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:textSize="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/button_register_cm"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />

    <Button
        style="@style/AppTheme.Button.GetStarted"
        android:id="@+id/backToSettingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:textSize="20dp"
        android:fontFamily="@font/roboto"
        android:text="Back to Setting"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        />


</android.support.constraint.ConstraintLayout>